<?xml version="1.0" encoding="utf-8"?>

<LinearLayout style="@style/laybar"
android:background="@color/black"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            style="@style/imgdialog"
            android:src="@drawable/baseline_info_24"
            android:layout_gravity="center"
            android:background="@color/black"
            android:layout_marginBottom="@dimen/_10dp" />

        <TextView
            style="@style/buttonsstyl"
            android:text="@string/save_changes"
            android:id="@+id/btntxt"
            android:textSize="@dimen/_16dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_20dp" />

        <LinearLayout
            style="@style/laybar"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_no"
                style="@style/buttonsstyl"
                android:layout_weight="1"
                android:text="@string/discard"
                android:background="@drawable/square_button"
                app:backgroundTint="@color/redd" />

            <Button
                android:id="@+id/btn_yes"
                style="@style/buttonsstyl"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_10dp"
                android:text="@string/save"
                android:background="@drawable/square_button"
                app:backgroundTint="@color/greeen" />

        </LinearLayout>

    </LinearLayout>


