<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:padding="@dimen/_8dp"
    tools:context=".ui.fragments.NotesListFragment">


    <LinearLayout
        android:id="@+id/topindexLinlay"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_25dp"
        style="@style/laybar"
        android:orientation="horizontal">


        <TextView
            android:layout_marginTop="@dimen/_10dp"
            style="@style/texts"
       android:text="@string/notes"
            android:textColor="@color/white"
            android:layout_weight="7"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabeye"
           style="@style/buttonsstyl"
            android:src="@drawable/baseline_search_24"

            android:contentDescription="@string/add_note"
            app:backgroundTint="@color/buttonblack"
            app:tint="@color/white"
            android:layout_marginEnd="@dimen/_10dp"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSave"
         style="@style/buttonsstyl"
            android:src="@drawable/baseline_info_outline_24"

            android:contentDescription="@string/add_note"
            app:backgroundTint="@color/buttonblack"
            app:tint="@color/white"
            android:layout_marginRight="@dimen/_10dp"

            />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/emptyStateLayout"
style="@style/laybar"
app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topindexLinlay">


        <ImageView
            android:id="@+id/backgroundImage"
       style="@style/imgdefstyl"
            android:layout_gravity="center"
            android:src="@drawable/img" />


        <TextView
            android:id="@+id/tvTitle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_32dp"
            android:text="@string/emptynotesline"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_24sp"
            android:textStyle="italic" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/recyshape"
        app:layout_constraintTop_toBottomOf="@id/topindexLinlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_note"
        android:layout_marginTop="@dimen/_16dp" />






    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        android:contentDescription="@string/add_note"
        app:backgroundTint="@color/buttonblack"
    app:tint="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginBottom="@dimen/_100dp"
    android:layout_marginEnd="@dimen/_16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>